--- a/addons/hr_attendance/static/src/scss/kiosk/hr_attendance.scss
+++ b/addons/hr_attendance/static/src/scss/kiosk/hr_attendance.scss
@@ -38,27 +38,59 @@
 
 .o_mobile_barcode {
     width: max-content;
-    top: -200%;
+    // top: -200%;
+    .i_barcode_scanner_icon_scan {
+        position: absolute;
+        width: 80%;
+        height: 2px;
+        background: #{$danger};
+        box-shadow: 0 0 10px #{$danger};
+        animation: scanMove 2s infinite ease-in-out;
+    }
+}
+@keyframes scanMove {
+    from {top:20%; opacity: 0;}
+    50% {opacity: 1;}
+    to {top: 80%; opacity: 0;}
 }
 
 .o_hr_attendance_install_btn {
     transform: scale(0.75);
-    left: 115%;
-    top: -200%;
+    // left: 115%;
+    // top: -200%;
+    top:0;
+    right:0;
+}
+
+.i_hr_kiosk_manual {
+    backdrop-filter: blur(50px) saturate(180%);
+    box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3), inset 0 -2px 3px rgba(0, 0, 0, 0.2), 0 8px 20px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
+
+.i_hr_kiosk_manual_wrapper {
+    height: calc(100% - var(--kiosk-searchBar-height));
 }
 
 .o_hr_kiosk_sidebar {
-    height: calc(100dvh - var(--kiosk-searchBar-height));
+    // height: calc(100dvh - var(--kiosk-searchBar-height));
     min-width: var(--kiosk-sidebar-width);
 }
 
 .o_hr_kiosk_manual_selection {
-    height: calc(100dvh - var(--kiosk-searchBar-height));
+    // height: calc(100dvh - var(--kiosk-searchBar-height));
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-template-rows: max-content;
+
+    .i_employee_card {
+        box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3), inset 0 -2px 3px rgba(0, 0, 0, 0.2);
+        background: rgba(255, 255, 255, 0.6);
+        cursor: pointer;
+    }
     
     img {
         width:4rem;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     }
 
     @include media-breakpoint-down(md) {
@@ -127,6 +159,54 @@
                 animation-delay: -5s;
             }
         }
+    }
+
+    .i_hr_attendance_kiosk_bg {
+        width: 480px;
+        background: rgba(255, 255, 255, 0.65);
+        backdrop-filter: blur(40px);
+        border-radius: 32px;
+        box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3), inset 0 -2px 3px rgba(0, 0, 0, 0.2), 0 8px 20px rgba(0, 0, 0, 0.2);
+        padding: 3rem;
+        overflow: hidden;
+        .btn {
+            box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3), inset 0 -2px 3px rgba(0, 0, 0, 0.2), 0 8px 20px rgba(0, 0, 0, 0.2) !important;
+            border: 0 !important;
+        }
+        .i_employee_result_wrapper {
+            max-height: 200px;
+            overflow-y: auto;
+            
+            // Same as sidebar scrollbar;
+            // but changed to dark
+            &::-webkit-scrollbar {
+                width: 8px;
+            }
+            &::-webkit-scrollbar-thumb {
+                background: hsla(#{$i-system-color-dark-hsl}, .3);
+                border-radius: $border-radius-pill;
+                &:hover {
+                    background: hsla(#{$i-system-color-dark-hsl}, .6);
+                }
+            }
+
+            .i_employee_result {
+                cursor: pointer;
+                transition: all 0.3s ease;
+                background: white;
+                box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3), inset 0 -2px 3px rgba(0, 0, 0, 0.2);
+
+                &:hover {
+                    background: mix($o-view-background-color, $o-action, 90%);
+                    transform: translateX(4px);
+                }
+            }
+        }
+    }
+
+    .alert {
+        box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3), inset 0 -2px 3px rgba(0, 0, 0, 0.2), 0 8px 20px rgba(0, 0, 0, 0.2);
+        border: 0;
     }
 }
 @keyframes float {
