--- a/addons/resource/views/resource_calendar_views.xml
+++ b/addons/resource/views/resource_calendar_views.xml
@@ -152,7 +152,7 @@
                     </div>
                     <sidepanel>
                         <group string="Status" class="border rounded mb-4 i__group">
-                            <div class="alert alert-warning" colspan="2">
+                            <div class="alert alert-warning" role="alert" colspan="2">
                                 <strong>Warning! </strong>editing this, may result in unnecessary work entries deletation,
                                 please really make sure you know what you're doing.
                             </div>
